Fixed task title overflow. And set max length to some inputs.

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@ body {
 
 ::-webkit-scrollbar {
     width: 2px;
+    height: 2px;
 }
 ::-webkit-scrollbar-thumb {
     @apply bg-default-200;
